--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/material": "^5.14.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.18.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
